--- a/src/components/responsive-image.module.css
+++ b/src/components/responsive-image.module.css
@@ -1,12 +1,18 @@
+.picture {
+  grid-column: 2 / 5;
+}
+
 .image {
   width: 100%;
   height: auto;
   border-radius: 0.5rem;
-  margin: var(--spacing-3) 0;
-  grid-column: 1 / -1;
 }
 
 @media (max-width: 640px) {
+  .picture {
+    grid-column: 1 / -1;
+  }
+
   .image {
     border-radius: 0;
   }
